--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #eecd12;
+  background-image: linear-gradient(to right, red, yellow);
   font-family: "Lobster", sans-serif;
 }
 .title,
@@ -16,8 +16,6 @@ body {
   padding-bottom: 2rem;
   font-size: 2rem;
   color: #fff;
-  text-shadow: 0 0 42px #eb2604, 0 0 82px #eb2604, 0 0 92px #eb2604,
-    0 0 102px #eb2604, 0 0 151px #eb2604;
 }
 .buttons {
   gap: 1rem;
@@ -67,9 +65,9 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
-  padding-left: 1.6vw;
-  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #fe5613,
-    0 0 0.8rem #fe5613, 0 0 2.8rem #fe5613, inset 0 0 1.3rem #fe5613;
+  justify-content: center;
+  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #fff, 0 0 0.2rem #fff,
+    0 0 2.2rem #fff, inset 0 0 1rem #fff;
   color: #fff;
   transition: all 0.2s ease-in-out;
   cursor: pointer;
@@ -83,8 +81,7 @@ body {
 }
 
 .modal-wrapper {
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
   width: 100vw;
   height: 100vh;
   position: fixed; /* Stay in place */
@@ -105,14 +102,13 @@ body {
 /* Modal Content/Box */
 .modal-content,
 .front-content {
-  background-color: rgba(101, 255, 191, 0.164);
+  background-color: rgba(255, 255, 255, 0.27);
   text-align: center;
   width: 100%; /* Could be more or less, depending on screen size */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border: thin;
   border-radius: 20px;
   color: #fff;
-  text-shadow: 0 0 7px #5271ff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #5271ff;
 }
 
 .front-content {
@@ -123,8 +119,7 @@ body {
   border: 0.2rem solid #fff;
   border-radius: 2rem;
   padding: 2rem 5rem 2rem 5rem;
-  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
-    0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+
   min-height: 100%;
   display: flex;
   justify-content: center;
@@ -138,7 +133,7 @@ body {
 
 .inputField {
   display: flex;
-  font-size: max(3vw, 25px);
+  font-size: max(2.5vw, 25px);
   width: 100%;
   padding-bottom: 3rem;
   align-items: center;
@@ -149,12 +144,10 @@ body {
   background-color: rgba(201, 201, 201, 0.678);
   border: 0.1rem solid #fff;
   border-radius: 1rem;
-  box-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 40px #fff,
-    0 0 80px rgba(0, 255, 170, 0.485), 0 0 90px rgba(0, 255, 170, 0.352);
+
   padding: 0.5rem;
   color: black;
   font-size: 2rem;
-  text-shadow: 0 0 7px #ff00009b, 0 0 10px rgb(255, 0, 0);
   width: 50%;
 }
 .input-label {
@@ -176,18 +169,13 @@ input[type="radio"] {
 }
 
 .startButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 1rem;
   width: 200px;
   outline: none;
   background-color: rgba(201, 201, 201, 0.678);
   border: 0.1rem solid #fff;
   border-radius: 1rem;
-  box-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 40px #fff,
-    0 0 80px rgba(0, 255, 170, 0.485), 0 0 90px rgba(0, 255, 170, 0.352);
-  text-shadow: 0 0 3px #4ee60e9b, 0 0 10px rgb(0, 255, 21);
+
   color: rgb(18, 64, 26);
   font-size: 1.5rem;
   font-weight: 500;
